krimo/krimo-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krimo-redis-svc
  namespace: krimo
  labels:
    app: krimo-redis
spec:
  selector:
    app: krimo-redis
  ports:
    - name: krimo-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
