krimo/krimo-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krimo-ingress
  namespace: krimo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/revision-history-limit: "2"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - krimo.k8s.marcsello.com
      secretName: letsencrypt
  rules:
    - host: krimo.k8s.marcsello.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: krimo-backend-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krimo-ingress-intra
  namespace: krimo
  annotations:
    cert-manager.io/cluster-issuer: "stepca"
    cert-manager.io/revision-history-limit: "2"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - krimo.k8s.backend.local
      secretName: stepca
  rules:
    - host: krimo.k8s.backend.local
      http:
        paths:
          - path: /internal
            pathType: Prefix
            backend:
              service:
                name: krimo-backend-svc
                port:
                  number: 80
